# un-motion

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml
LICENSES/: ccap-rs-MIT.txt
apps/un-motion-supervisor/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/un-motion-supervisor/scripts/: sync-sound-assets.mjs
apps/un-motion-supervisor/src/: App.svelte  dev-ipc-mock.ts  main.ts  styles.css
apps/un-motion-supervisor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/un-motion-supervisor/src-tauri/capabilities/: main.json
apps/un-motion-supervisor/src-tauri/icons/: icon.icns
apps/un-motion-supervisor/src-tauri/locales/: en-US.toml  ja-JP.toml
apps/un-motion-supervisor/src-tauri/permissions/: supervisor-invoke.toml
apps/un-motion-supervisor/src-tauri/src/: i18n.rs  lib.rs  main.rs
assets/brand/: README.md
assets/poses/: README.md
assets/sounds/: README.md  un-calibration-sound-pon.flac  un-calibration-sound-pun.flac
configs/: desktop.example.toml  pipeline-policy.example.toml  research-penn-action-file-video.example.toml
crates/un-motion-capturer/: Cargo.toml  build.rs
crates/un-motion-capturer/src/: main.rs
crates/un-motion-config/: Cargo.toml
crates/un-motion-config/src/: lib.rs
crates/un-motion-core/: Cargo.toml
crates/un-motion-core-client/: Cargo.toml
crates/un-motion-core-client/src/: lib.rs
crates/un-motion-core/src/: control.rs  lib.rs  main.rs  runtime_host.rs  server.rs  tray.rs  unmotion_source.rs
crates/un-motion-engine-mediapipe-native/: Cargo.toml
crates/un-motion-engine-mediapipe-native/src/: lib.rs
crates/un-motion-engine-mediapipe-post-process/: Cargo.toml
crates/un-motion-engine-mediapipe-post-process/src/: lib.rs
crates/un-motion-engine-mediapipe-types/: Cargo.toml
crates/un-motion-engine-mediapipe-types/src/: lib.rs
crates/un-motion-input-file-image/: Cargo.toml
crates/un-motion-input-file-image/src/: lib.rs
crates/un-motion-input-file-video/: Cargo.toml
crates/un-motion-input-file-video/src/: lib.rs
crates/un-motion-input-ifacialmocap/: Cargo.toml
crates/un-motion-input-ifacialmocap/fixtures/: ifacialmocap-udp-mini.txt
crates/un-motion-input-ifacialmocap/src/: lib.rs
crates/un-motion-input-vmc/: Cargo.toml
crates/un-motion-input-vmc/fixtures/: vseeface-vmc-mini.jsonl  waidayo-vmc-mini.jsonl  warudo-vmc-mini.jsonl  wmc-vmc-mini.jsonl
crates/un-motion-input-vmc/src/: lib.rs
crates/un-motion-input-webcam-directshow/: Cargo.toml
crates/un-motion-input-webcam-directshow/src/: lib.rs
crates/un-motion-input-webcam-nokhwa/: Cargo.toml
crates/un-motion-input-webcam-nokhwa/src/: lib.rs
crates/un-motion-interfaces/: Cargo.toml
crates/un-motion-interfaces/src/: lib.rs
crates/un-motion-mediapipe-native/: Cargo.toml
crates/un-motion-mediapipe-native/src/: lib.rs
crates/un-motion-output-debug/: Cargo.toml
crates/un-motion-output-debug/src/: lib.rs
crates/un-motion-output-vmc/: Cargo.toml
crates/un-motion-output-vmc/src/: lib.rs
crates/un-motion-output-vrc-osc/: Cargo.toml
crates/un-motion-output-vrc-osc/src/: lib.rs
crates/un-motion-pipeline/: Cargo.toml
crates/un-motion-pipeline/src/: lib.rs
crates/un-motion-profile-schema/: Cargo.toml
crates/un-motion-profile-schema/src/: lib.rs  profile_document.rs  profile_settings.rs
crates/un-motion-record/: Cargo.toml
crates/un-motion-record/src/: lib.rs
crates/un-motion-runtime/: Cargo.toml
crates/un-motion-runtime/src/: cadence.rs  ifacialmocap_unmotion_source.rs  lib.rs  modifier.rs  output.rs  signal_enrich.rs  unmotion.rs  vmc_unmotion_source.rs  zenoh_output.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: architecture.md  capturer-pipeline.md  core-api-contract.md  development-guidelines.md  media-pipe-native-requirements.md  mediapipe-osc-interop-spec.md  mediapipe-post-process-rules.md  release-readiness.md  research-video-sources.md  vrc-osc-output.md  xtask.md
native/mediapipe/: BUILD.bazel  README.md  mediapipe-pin.toml  un-motion-mediapipe-backend.cc  un-motion-mediapipe-ffi.h
native/mediapipe/patches/: image_to_tensor_converter_frame_buffer.cc
scripts/: diagnose-vmc-receive.ps1
tests/pose/: README.md  fixtures.toml
tools/: arm-candidate-scan.mjs  arm-ik-param-search.mjs  vmc-compare.mjs  vmc-correction-merge.mjs  vmc-regression-summary.mjs  web-pose-inspect.mjs
