[package]
name = "un-motion-core-client"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
actix-web = "4"
un-motion-core = { path = "../un-motion-core" }
