[package]
name = "un-motion-core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
anyhow.workspace = true
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
toml = "0.8"
tracing = { workspace = true }
un-motion-engine-mediapipe-native = { path = "../un-motion-engine-mediapipe-native" }
un-motion-engine-mediapipe-post-process = { path = "../un-motion-engine-mediapipe-post-process" }
un-motion-frame = "1.1.0"
un-motion-input-file-image = { path = "../un-motion-input-file-image" }
un-motion-input-file-video = { path = "../un-motion-input-file-video" }
un-motion-input-webcam-directshow = { path = "../un-motion-input-webcam-directshow" }
un-motion-interfaces = { path = "../un-motion-interfaces" }
un-motion-mediapipe-native = { path = "../un-motion-mediapipe-native" }
un-motion-profile-schema = { path = "../un-motion-profile-schema" }
un-motion-runtime = { path = "../un-motion-runtime" }
un-motion-frame-zenoh = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tao = "0.34"
tray-icon = { version = "0.21", default-features = false }
windows = { version = "0.62", features = [
 "Win32_Foundation",
 "Win32_Security",
 "Win32_System_JobObjects",
 "Win32_System_Threading",
] }

[dev-dependencies]
rosc = "0.10"
