[package]
name = "un-motion-output-vmc"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
nokhwa = { version = "0.10", default-features = false, features = [
 "input-native",
 "decoding",
] }
rosc = "0.10"
serde.workspace = true
serde_json = "1"
un-motion-frame = "1.1.0"
un-motion-engine-mediapipe-native = { path = "../un-motion-engine-mediapipe-native" }
un-motion-engine-mediapipe-post-process = { path = "../un-motion-engine-mediapipe-post-process" }
un-motion-input-file-image = { path = "../un-motion-input-file-image" }
un-motion-input-webcam-directshow = { path = "../un-motion-input-webcam-directshow" }
un-motion-interfaces = { path = "../un-motion-interfaces" }
un-motion-mediapipe-native = { path = "../un-motion-mediapipe-native" }
un-motion-pipeline = { path = "../un-motion-pipeline" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
 "Win32_Foundation",
 "Win32_Media_DirectShow",
 "Win32_Media_MediaFoundation",
 "Win32_System_Com",
 "Win32_System_Com_StructuredStorage",
 "Win32_System_Ole",
 "Win32_System_Variant",
] }
