[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rosc = "0.10"
un-motion-frame = "1.1.0"
un-motion-frame-zenoh = "1.0"
un-motion-input-vmc = { path = "../un-motion-input-vmc" }
zip = { version = "2", default-features = false, features = ["deflate"] }
